2008-03-14  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/ja/00default.db: fix invalid HTML (reported by hb).

2008-03-11 SHIBATA Hiroshi <h-sbt@nifty.com>
	* dot.htaccess: add 'AddType application/xml'

2008-03-02 TADA Tadashi <sho@spc.gr.jp>
	* marged with Test_UTF8 branch, and started development of series 2.3.

2008-02-29 TADA Tadashi <sho@spc.gr.jp>
	* release 2.2.1.

2008-02-29 YAA <yaa at mail.ne.jp>
	* plugin/05referer.rb: fixed to display volatile referers in latest edit page.

2008-02-27 TADA Tadashi <sho@spc.gr.jp>
	* misc/style/etdiary: catch up current specification of the style.
	* skel/preview.rhtml*: supported label element for hide diary checkbox.

2008-02-24 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: fixed no saving referer on day mode.

2008-02-23 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: fixed #49.

2008-02-14 ds14050 <ds14050 at vvvvvv.sakura.ne.jp>
	* tdiary/wiki_style.rb: fixed eval error in valid_plugin_syntax?.

2008-02-13 TADA Tadashi <sho@spc.gr.jp>
	* misc/lib/hikidoc.rb: updated to trunk and fix about InterWikiName.

2008-02-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/wiki_style.rb: removed warning by HikiDoc#to_html.

2008-02-08 TADA Tadashi <sho@spc.gr.jp>
	* skel/diary.rhtml: hide div#comment-form-section without day mode.

2008-02-04 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary.rb,plugin/00default.rb,plugin/10spamfilter.rb,
	plugin/en/10spamfilter.rb,plugin/ja/10spamfilter.rb,
	plugin/zh/10spamfilter.rb,tdiary/filter/spam.rb:
	[EXPERIMENTAL] remove option for spamfilter.hide_comment.
	Javascript is used to display all TSUKKOMI from into setting days before.

2008-02-03 TADA Tadashi <sho@spc.gr.jp>
	* skel/diary.rhtml, plugin/00default.rb: [EXPERIMENTAL] add TSUKKOMI form
	by Javascript in the hidden comment form condition.

2008-01-19 TADA Tadashi <sho@spc.gr.jp>
	* misc/lib/hikidoc.rb: updated to 0.0.2.
	* tdiary/wiki_style.rb: added :use_wiki_name and